[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraymap = "0.1.1"
regex = "1.5.4"
crossterm = "0.23.0"
itertools = "0.10.3"

[profile.release]
debug = true

[profile.test]
opt-level = 3